--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
   "require": {
-    "gabordemooij/redbean": "dev-master"
-  }
+    "gabordemooij/redbean": "dev-master",
+    "squizlabs/php_codesniffer": "3.*"
+  },
+  "require-dev": {}
 }
